--- a/packages/keeper/config/config.arbitrum-one.json
+++ b/packages/keeper/config/config.arbitrum-one.json
@@ -7,69 +7,21 @@
       "gasLimit": 4400000
     }
   },
-  "marginlyKeeperAaveAddress": "0x193E76C78e1c02BF35c1F789Ce2a1aE39F865629",
+  "marginlyKeeperAaveAddress": "0xEfc060E66973a2cb16E77A80AD681244a855c0d0",
   "marginlyPools": [
     {
       "type": "aave",
-      "description": "weth-usdc.e",
-      "address": "0x53C08A5e2b7bc973d3d5Aee60373969E30e93B93",
-      "minProfitQuote": "1",
+      "description": "pt-weeth-27jun2024/weth",
+      "address": "0xcf848A30153506617B07207D2B3d054D4Fb72EBC",
+      "minProfitQuote": "0.0005",
       "minProfitBase": "0.0005"
     },
     {
       "type": "aave",
-      "description": "wbtc-weth",
-      "address": "0x99Cc2A68e121F2434db5C5D63670212F07f89ee8",
-      "minProfitQuote": "0.0005",
+      "description": "pt-usde-29aug2024/usdc",
+      "address": "0x79C37E226834Dc6BfB04Ba0b60f823515c32f50D",
+      "minProfitQuote": "1",
       "minProfitBase": "0.00005"
-    },
-    {
-      "type": "aave",
-      "description": "arb-usdc.e",
-      "address": "0x5ceB22fe09C7259b9dceef243615f180664BCE70",
-      "minProfitQuote": "1",
-      "minProfitBase": "0.8"
-    },
-    {
-      "type": "uniswapV3",
-      "description": "gmx-weth",
-      "address": "0x0637B18b5c5b7fe72F63a5511D2e90BEc7FC828E",
-      "minProfitQuote": "0.0005",
-      "minProfitBase": "0.1",
-      "flashLoanPools": ["0xb435ebfe0bf4ce66810aa4d44e3a5ca875d40db1"],
-      "swapCallData": "0"
-    },
-    {
-      "type": "uniswapV3",
-      "description": "pendle-weth",
-      "address": "0x3adc0f25c7A23a626A67811c47d0A0DbE21773a4",
-      "minProfitQuote": "0.0005",
-      "minProfitBase": "2",
-      "flashLoanPools": ["0xe8629b6a488f366d27dad801d1b5b445199e2ada"],
-      "swapCallData": "0"
-    },
-    {
-      "type": "uniswapV3",
-      "description": "rdnt-weth",
-      "address": "0x82bC6A8dA5988E66676014cA99056Bd7A2f44dF2",
-      "minProfitQuote": "0.0005",
-      "minProfitBase": "10",
-      "flashLoanPools": ["0x446BF9748B4eA044dd759d9B9311C70491dF8F29"],
-      "swapCallData": "11010049"
-    },
-    {
-      "type": "aave",
-      "description": "weth-usdc-native",
-      "address": "0x87e711BcB9Ed1f2f6dec8fcC74cD2e0613D43b86",
-      "minProfitQuote": "1",
-      "minProfitBase": "0.0005"
-    },
-    {
-      "type": "aave",
-      "description": "arb-usdc-native",
-      "address": "0x0F750fBb044037254b5843C6b4a715AA12876d94",
-      "minProfitQuote": "1",
-      "minProfitBase": "0.8"
     }
   ]
 }
