--- a/.github/workflows/build-and-deploy-keeper.yml
+++ b/.github/workflows/build-and-deploy-keeper.yml
@@ -14,7 +14,6 @@ env:
   LIMIT_CPU: '500m'
   LIMIT_MEMORY: '512Mi'
   HELM_REPOSITORY: 'eq-lab/devops-helm-charts-deploy'
-  RELEASE_NUM: "v1.5"
 
 jobs:
   build-image:
@@ -67,7 +66,7 @@ jobs:
           - ethereum
           - arbitrum-one
     env:
-      SERVICE_NAME: keeper-${{ matrix.config }}-${{ env.RELEASE_NUM }}
+      SERVICE_NAME: "keeper-${{ matrix.config }}-v1.5"
       PK: ${{ secrets.MARGINLY_KEEPER_ARBITRUM_PRIVATE_KEY }}
       NAMESPACE: ${{ secrets.NAMESPACE }}
     steps:
