--- a/packages/deploy/src/data/deploy/ethereum-v1.5-pendle/config.json
+++ b/packages/deploy/src/data/deploy/ethereum-v1.5-pendle/config.json
@@ -322,6 +322,7 @@
   "marginlyKeeper": {
     "aaveKeeper": {
       "aavePoolAddressesProvider": "0x2f39d218133AFaB8F2B819B1066c7E434Ad94E9e"
-    }
+    },
+    "uniswapKeeper": true
   }
 }
