--- a/packages/keeper/config/config.arbitrum-one.json
+++ b/packages/keeper/config/config.arbitrum-one.json
@@ -7,31 +7,33 @@
       "gasLimit": 4400000
     }
   },
-  "marginlyKeeperAaveAddress": "0x193E76C78e1c02BF35c1F789Ce2a1aE39F865629",
+  "keepers": {
+    "aave": "0x193E76C78e1c02BF35c1F789Ce2a1aE39F865629"
+  },
   "marginlyPools": [
     {
-      "type": "aave",
+      "keeperType": "aave",
       "description": "weth-usdc.e",
       "address": "0x53C08A5e2b7bc973d3d5Aee60373969E30e93B93",
       "minProfitQuote": "1",
       "minProfitBase": "0.0005"
     },
     {
-      "type": "aave",
+      "keeperType": "aave",
       "description": "wbtc-weth",
       "address": "0x99Cc2A68e121F2434db5C5D63670212F07f89ee8",
       "minProfitQuote": "0.0005",
       "minProfitBase": "0.00005"
     },
     {
-      "type": "aave",
+      "keeperType": "aave",
       "description": "arb-usdc.e",
       "address": "0x5ceB22fe09C7259b9dceef243615f180664BCE70",
       "minProfitQuote": "1",
       "minProfitBase": "0.8"
     },
     {
-      "type": "uniswapV3",
+      "keeperType": "uniswapV3",
       "description": "gmx-weth",
       "address": "0x0637B18b5c5b7fe72F63a5511D2e90BEc7FC828E",
       "minProfitQuote": "0.0005",
@@ -40,7 +42,7 @@
       "swapCallData": "0"
     },
     {
-      "type": "uniswapV3",
+      "keeperType": "uniswapV3",
       "description": "pendle-weth",
       "address": "0x3adc0f25c7A23a626A67811c47d0A0DbE21773a4",
       "minProfitQuote": "0.0005",
@@ -49,7 +51,7 @@
       "swapCallData": "0"
     },
     {
-      "type": "uniswapV3",
+      "keeperType": "uniswapV3",
       "description": "rdnt-weth",
       "address": "0x82bC6A8dA5988E66676014cA99056Bd7A2f44dF2",
       "minProfitQuote": "0.0005",
@@ -58,14 +60,14 @@
       "swapCallData": "11010049"
     },
     {
-      "type": "aave",
+      "keeperType": "aave",
       "description": "weth-usdc-native",
       "address": "0x87e711BcB9Ed1f2f6dec8fcC74cD2e0613D43b86",
       "minProfitQuote": "1",
       "minProfitBase": "0.0005"
     },
     {
-      "type": "aave",
+      "keeperType": "aave",
       "description": "arb-usdc-native",
       "address": "0x0F750fBb044037254b5843C6b4a715AA12876d94",
       "minProfitQuote": "1",
