fix github actions

--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -39,6 +39,7 @@ jobs:
             shortEmergency,
             keeperAave,
             keeperUniswapV3,
+            keeperBalancer,
             balanceSync,
             balanceSyncWithdrawBase,
             balanceSyncWithdrawQuote,
