--- a/packages/deploy/src/data/deploy/arbitrum-v1.5/config.json
+++ b/packages/deploy/src/data/deploy/arbitrum-v1.5/config.json
@@ -166,6 +166,10 @@
   "marginlyKeeper": {
     "aaveKeeper": {
       "aavePoolAddressesProvider": "0xa97684ead0e402dc232d5a977953df7ecbab3cdb"
+    },
+    "uniswapKeeper": true,
+    "balancerKeeper": {
+      "balancerVault": "0xBA12222222228d8Ba445958a75a0704d566BF2C8"
     }
   }
 }
