--- a/packages/keeper/config/config.ethereum.json
+++ b/packages/keeper/config/config.ethereum.json
@@ -8,12 +8,13 @@
     }
   },
   "keepers": {
-    "aave": "0x623342afe5C8cA6a090F8F09399c2713107EEccF",
-    "uniswapV3": "0x9FfD55a972369283D4B8527b6953d38BB8D67316"
+    "aave": "0xD8AC17F34E6973EdE78C884709c49b8b5fD06d3f",
+    "uniswapV3": "0x9FfD55a972369283D4B8527b6953d38BB8D67316",
+    "balancer": "0xCddbA9E308a71375FCe9ABbeBAce15dbECe19958"
   },
   "marginlyPools": [
     {
-      "keeperType": "aave",
+      "keeperType": "balancer",
       "description": "pt-weeth-27jun2024/weth",
       "address": "0xE45FD040dCaF59276Be6AAC6A3C14e4707381AAC",
       "minProfitQuote": "0.001",
@@ -21,7 +22,7 @@
       "swapCallData": "18350081"
     },
     {
-      "keeperType": "aave",
+      "keeperType": "balancer",
       "description": "pt-weeth-26dec2024/weth",
       "address": "0xa77C2275C1F403056c7F73B44df69E374C299dd7",
       "minProfitQuote": "0.001",
@@ -29,7 +30,7 @@
       "swapCallData": "18350081"
     },
     {
-      "keeperType": "aave",
+      "keeperType": "balancer",
       "description": "pt-usde-25jul2024/usdt",
       "address": "0xbd4a9ca12c5f3c12d1378843c0b91585475aed51",
       "minProfitQuote": "1",
@@ -37,7 +38,7 @@
       "swapCallData": "18350081"
     },
     {
-      "keeperType": "uniswapV3",
+      "keeperType": "balancer",
       "description": "pt-weeth-26dec2024/weeth",
       "address": "0x4Cac44a1C50fea3F458f5F31529C0810AFcac497",
       "flashLoanPools": ["0x7a415b19932c0105c82fdb6b720bb01b0cc2cae3"],
@@ -46,7 +47,7 @@
       "swapCallData": "20447233"
     },
     {
-      "keeperType": "uniswapV3",
+      "keeperType": "balancer",
       "description": "pt-ezeth-26sep2024/ezeth",
       "address": "0x48f6E31CFe4da92C2470f8b797aa89a9460E9975",
       "flashLoanPools": ["0xbe80225f09645f172b079394312220637c440a63"],
@@ -55,7 +56,7 @@
       "swapCallData": "20447233"
     },
     {
-      "keeperType": "uniswapV3",
+      "keeperType": "balancer",
       "description": "pt-ezeth-26dec2024/ezeth",
       "address": "0xb34DfB03973e148ED800F369EdE84b92803116CA",
       "flashLoanPools": ["0xbe80225f09645f172b079394312220637c440a63"],
