add 2024-08-26 Ethereum deploy info

--- a/packages/deploy/src/data/deploy/ethereum-v1.5-pendle/config.json
+++ b/packages/deploy/src/data/deploy/ethereum-v1.5-pendle/config.json
@@ -4,7 +4,10 @@
   },
   "connection": {
     "assertChainId": 1,
-    "ethOptions": {}
+    "ethOptions": {
+      "gasLimit": 700000,
+      "gasPrice": 4000000000
+    }
   },
   "tokens": [
     {
